<resources>
    <string name="app_name">ILC Cricket Scorer</string>
    <string name="facebook_app_id">107032913356982</string>
    <string name="ph_no">Phone Number</string>
    <string name="select_from_db">From DB :</string>
    <string name="or">OR</string>
    <string name="from_contacts">From Contacts</string>
    <string name="create_new">Create New Player :</string>
    <string name="submit">Submit</string>
    <string name="striker">Striker</string>
    <string name="non_striker">Non Striker</string>
    <string name="current_bowler">Current Bowler</string>
    <string name="select_from_contacts">Select from contacts :</string>
    <string name="player_name">Player Name</string>
    <string name="player_ph_no">Player Phone Number</string>
    <string name="next_bowler">Next Bowler</string>
    <string name="out">Out</string>
    <string name="caught">Caught</string>
    <string name="lbw">LBW</string>
    <string name="bowled">Bowled</string>
    <string name="runout">Run Out</string>
    <string name="hit_wicket">Hit Wicket</string>
    <string name="caught_by">Caught By</string>
    <string name="runs_scored">Runs Scored</string>
    <string name="run_out_by">Run out by :</string>
    <string name="wicket_of">Wicket of:</string>
    <string name="wicket">Wicket</string>
    <string name="add_player_bowling_team">Add player to fielding team</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="Noofplayers">No of players</string>
    <string name="total_overs">Total overs</string>
    <string name="venue">Venue</string>
    <string name="Teama">Team A</string>
    <string name="choose_to">Choose to</string>
    <string name="start_match">Start Match</string>
    <string name="team_ask_toss">Team ask toss</string>
    <string name="on_toss_won">On toss won</string>
    <string name="toss">Toss</string>
    <string name="head">Head</string>
    <string name="tail">Tail</string>
    <string name="new_game">New Game</string>
    <string name="new_game_desc">Strats a fresh game</string>
    <string name="saved_game">Saved game</string>
    <string name="saved_game_desc">Continue or view your last game</string>
    <string name="profile">Profile</string>
    <string name="profile_desc">View your personal info and achivements</string>
    <string name="schedule_game">Schedule Game</string>
    <string name="schedule_game_desc">Schedule a new game and remind</string>
    <string name="add_player_desc">Add a new player</string>
    <string name="add_player">Add player</string>
    <string name="add_team_desc">Add a new team</string>
    <string name="add_team">Team</string>
    <string name="menu">Menu</string>
    <string name="select_valid_home_away_team">Please select valid home and away team</string>
    <string name="click_new_team">Click add button to create new Team</string>
    <string name="touch_here">Touch above image to toss</string>
    <string name="player_op">Player in opponent</string>
    <string name="phno_exist">Phone number already exist</string>
    <string name="player_already_in">Player already in team</string>
    <string name="button_undo">UNDO</string>
    <string name="nick_name">Nick name</string>
    <string name="player_already_batted">Player already batted/batting</string>
    <string name="enter_team_name">Please enter team name</string>
    <string name="enter_team_nick_name">Please enter team nick name</string>
    <string name="next_batsman">Next Batsman</string>
    <string name="no_spell">Bowler can\'t spell</string>
    <string name="bowled_limited">Bowled limited over</string>
    <string name="player_in_striker_end">Player in striker end</string>
    <string name="desc">Description</string>
    <string name="home_team_player">HomeTeam Player</string>
    <string name="away_teamPlay">Away Team Player</string>
    <string name="time">Time</string>
    <string name="share">Share</string>
    <string name="next">next</string>
    <string name="vs">Vs</string>
    <string name="players">Players</string>
    <string name="atsym">\@</string>
    <string name="game_over">Game Over</string>
    <string name="back">Back</string>
    <string name="re_toss_r_edit">ReToss or Edit</string>
    <string name="won_toss">Won Toss</string>
    <string name="completed">Completed</string>
    <string name="innings_break">Innings Break</string>
    <string name="on_going">On Going</string>
    <string name="match_not_started">Yet to start</string>
    <string name="won_and_elect">won toss and elect to</string>
    <string name="match">Match</string>
    <string name="refree">Refree</string>
    <string name="third_Umpire">3rd Umpire</string>
    <string name="umpires">Umpires</string>
    <string name="date">Date</string>
    <string name="series">Series</string>
    <string name="squads">Squads</string>
    <string name="info">Info</string>
    <string name="batsman">Batsman</string>
    <string name="sr">SR</string>
    <string name="sixes">6s</string>
    <string name="fours">4s</string>
    <string name="B">B</string>
    <string name="R">R</string>
    <string name="extras">Extras</string>
    <string name="total">Total</string>
    <string name="did_not_bat">Did not bat</string>
    <string name="o">O</string>
    <string name="m">M</string>
    <string name="r">R</string>
    <string name="w">W</string>
    <string name="er">ER</string>
    <string name="fall_of_wicket">Fall of Wickets</string>
    <string name="score">Score</string>
    <string name="over">Over</string>
    <string name="powerplay">Powerplay</string>
    <string name="runs">Runs</string>
    <string name="batting">Batting</string>
    <string name="overs">Overs</string>
    <string name="stumped">Stumped</string>
    <string name="confirm">Confirmation</string>
    <string name="first_innings_completed">First Innings completed. To Continue second innings press ok.</string>
    <string name="match_completed">Match Completed</string>
    <string name="bowler">Bowler</string>
    <string name="needs">needs</string>
    <string name="runs_in">runs in</string>
    <string name="balls">balls</string>
    <string name="swap_batsman">Swap Batsman</string>
    <string name="view_score_card">View ScoreCard</string>
    <string name="redo_last_ball">Redo LastBall</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="scorer">Scorer</string>
    <string name="score_board">ScoreBoard</string>
    <string name="rrr">REQ</string>
    <string name="activity_image_trans">slideTransfer</string>
    <string name="recent">Recent</string>
    <string name="upcoming">Up Coming</string>
    <string name="player_in_match">Player in ongoin match.Complete or delete the match to delete player</string>
    <string name="pick_time">Pick Time</string>
    <string name="save">save</string>
    <string name="team_in_match">Team in ongoing or upcoming match.</string>
    <string name="search">Search</string>
    <string name="bowler_cant_change">Bowler should not change in mid of the over</string>
    <string name="non_striker_cant_change">Batsman should not change after faced a ball</string>
    <string name="striker_cant_change">Batsman should not change after faced a ball</string>
    <string name="batting_style">Batting Sytle</string>
    <string name="bowling_style">Bowling Style</string>
    <string name="role">Role</string>
    <string name="dob">DOB</string>
    <string name="toss_mannually">Toss Manually</string>
    <string name="team_won_toss">Team won toss</string>
    <string name="email">email id</string>
    <string name="viewer">Viewer</string>
    <string name="view_desc">Catch the action live</string>
    <string name="wickets">wicket(s)</string>
    <string name="won_by">won by</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="match_center">Match Center</string>
    <string name="add_ground">Ground</string>
    <string name="Scoring">Scoring</string>
    <string name="team">Team</string>
    <string name="match_info">Match Details</string>
    <string name="select_match_time">Enter match time</string>
    <string name="select_venue">Select venue</string>
    <string name="ilc_abb">I Love Cricket</string>
    <string name="ground_name">Ground name</string>
    <string name="btn_share">SHARE</string>
    <string name="filter">filter</string>
</resources>