<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/next"
        android:icon="@drawable/next_send"
        android:orderInCategory="100"
        android:title="@string/next"
        android:visible="false"
        app:showAsAction="never" />
    <group
    android:id="@+id/menu_settings"
    >
    <item
        android:id="@+id/redo"
        android:actionLayout="@layout/tool_bar"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/redo"
        app:showAsAction="never" />

    <item
        android:id="@+id/undo"
        android:actionLayout="@layout/tool_bar"
        android:orderInCategory="200"
        android:title="@string/undo"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/view_icon"
        android:actionLayout="@layout/tool_bar"
        android:orderInCategory="200"
        android:title="@string/view_score_card"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/swap_batsman"
        android:actionLayout="@layout/tool_bar"
        android:orderInCategory="200"
        android:title="@string/swap_batsman"
        android:visible="false"
        app:showAsAction="never" />
</group>

</menu>