<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/detail_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/home_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/home_team"
                    android:singleLine="true"
                    android:textColor="@color/hint_color"
                    android:textColorHint="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/vs"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <TextView
                    android:id="@+id/away_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/away_team"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/atsym"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/transperant"
                android:gravity="center"
                android:hint="@string/venue"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_hint_color" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textColor="@color/hint_color"
                android:visibility="gone" />

            <TextView
                android:id="@+id/times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/time"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/players"

                android:textColor="@color/hint_color" />

            <TextView
                android:id="@+id/players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableRight="@android:drawable/ic_menu_edit"
                android:gravity="center"
                android:hint="@string/home_team_player"

                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>


        <TextView
            android:id="@+id/Bplayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/away_teamPlay"
            android:textColor="@color/hint_color"
            android:visibility="gone" />

        <TextView
            android:id="@+id/Bplaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@android:drawable/ic_menu_edit"
            android:gravity="center"
            android:hint="@string/away_teamPlay"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:visibility="gone" />


        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/desc"

            android:textColor="@color/hint_color" />

        <EditText
            android:id="@+id/descc"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/border_bg"
            android:gravity="top"
            android:hint="@string/desc"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:textColorHint="@color/edit_hint_color" />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/colorAccent"
            android:text="@string/share"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/next"
            android:cursorVisible="false"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/home_team"
            android:imeOptions="actionNext"
            android:singleLine="true" />


        <FrameLayout
            android:id="@+id/containerView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:visibility="gone"></FrameLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_gravity="bottom|right"
            android:layout_margin="5dp"
            android:background="@color/cardview_dark_background"
            android:hint="@string/home_team"
            android:text="@string/next"
            android:textColor="@color/black" />
    </RelativeLayout>
</LinearLayout>








